frontend header component hinzugefuegt

--- a/www/src/app/app.component.html
+++ b/www/src/app/app.component.html
@@ -5,10 +5,13 @@
 
   <body>
 
-    <div id="title">
-      <h1>Mein Account</h1>
-    </div>
+    <header></header>
+    
+
 
   </body>
-  <router-outlet> </router-outlet>
+
+
+
+  <router-outlet></router-outlet>
 </html>
