--- a/www/src/app/header/header.component.html
+++ b/www/src/app/header/header.component.html
@@ -4,7 +4,15 @@
     
   </div>
   <div id="title">
-    <h1 (click)="click()">Mein Account</h1>
+    <table id="titleTable">
+      <tbody>
+        <tr>
+          <td><img id="logo" src="assets/logo/logo.png"></td>
+          <td style="float: right;"> <h1 (click)="click()">Mein Account</h1></td>
+        </tr>
+      </tbody>
+    </table>
+   
   </div>
 
 
