--- a/www/src/app/item-table/item-table.component.scss
+++ b/www/src/app/item-table/item-table.component.scss
@@ -5,14 +5,9 @@
     border-collapse: collapse;
     width: 60%;
     margin-left: 20%;
-  }
-  
-  #items td, #users th {
-    border: 1px solid #ddd;
+    border: 0px;
     padding: 8px;
   }
-  
-  #items tr:nth-child(even){background-color: #f2f2f2;}
   
   #items tr:hover {background-color: #ddd;}
   
@@ -20,8 +15,11 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
-    color: white;
+    color: black;
+    font-size: 25px;
+  }
+  #items tr {
+    color: gray;
   }
 select {
   font-size: 15px;
@@ -36,8 +34,8 @@ select {
 
   #start {
     text-align: center;
-    height: 600px;
-    background-color: rgb(167, 167, 167);
+    height: 300px;
+   
   }
   #start h1 {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -53,4 +51,30 @@ select {
   #searchFeld {
     font-size: 30px;
     border-radius: 10px;
+    margin-top: 170px;
+  }
+  #beschreibung {
+   border: 0px; 
+   width: 500px;
+  }
+  #preis {
+    border: 0px;
+    color: green;
+    font-size: 30px;
+    text-align: right;
+  }
+  #rabatt {
+    border: 0px;
+    color: red;
+    font-size: 25px;
+    text-align: right;
+    padding-right: 10px;
+  }
+  #startPreis {
+    border: 0px;
+    color: black;
+    font-size: 18px;
+    text-align: right;
+    padding-right: 10px;
+    text-decoration: line-through;
   }
