--- a/www/src/app/item-table/item-table.component.html
+++ b/www/src/app/item-table/item-table.component.html
@@ -55,22 +55,25 @@
                             <h2 id="preisBis">Prozent bis </h2>
                         </td>
                     </tr>
-                    <tr *ngFor="let item of itemsAnzeige | paginate: { itemsPerPage: seitenzahl, currentPage: p }" id="items" (click)="clicked(item)">
-                        <td style="width: 200px;"><img src={{item.bildLink}}></td>
+                    <tr *ngFor="let item of itemsAnzeige | paginate: { itemsPerPage: seitenzahl, currentPage: p }" id="items">
+                        <td style="width: 200px;" (click)="clicked(item)"><img src={{item.bildLink}}></td>
                         <td style="width: 430px;">
                             <table style="border-color: white;">
                                 <tbody>
-                                    <tr>
+                                    <tr id="link"> 
+                                        <a href="{{item.deeplink}}" target="_blank" style="color: gray; text-decoration: none;"> {{item.apiLink.description}}</a>
+                                    </tr>
+                                    <tr (click)="clicked(item)">
                                         <th>{{item.artikelbezeichnung}}</th>
                                     </tr>
-                                    <tr>
+                                    <tr (click)="clicked(item)">
                                         <td id="beschreibung" >{{item.beschreibungsfeld}}</td>
                                     </tr>
-                                    <tr>
+                                    <tr (click)="clicked(item)">
                                         <td></td>
                                         <td id="startPreis"><b>{{item.stattpreis}}€</b></td>
                                     </tr>
-                                    <tr>
+                                    <tr (click)="clicked(item)">
                                         <td id="rabatt"> <b>- {{item.percentage.toFixed(0)}}% </b> </td>
                                         <td id="preis"><b>{{item.bruttopreis}}€</b></td>
                                     </tr>
