--- a/www/src/app/header/header.component.scss
+++ b/www/src/app/header/header.component.scss
@@ -1,9 +1,10 @@
 #title {
     height: 80px;
-    width: 100%;
+    width: 102%;
     position:fixed;
     top: 5px;
     background-color: rgba(0, 0, 0, 0.37);
+    margin-left: -18px;
   }
   #title h1
   {
@@ -16,6 +17,7 @@
   }
   #logo {
     width: 180px;
+    margin-left: 15px;
   }
   #titleTable {
     width: 100%;
