--- a/www/src/app/item-table/item-table.component.html
+++ b/www/src/app/item-table/item-table.component.html
@@ -110,6 +110,19 @@
                 </tbody>
             </table>    
         </div>  
+        
+        <div id="impressum">
+            <h1 style="color: rgba(0, 0, 0, 0.315); text-decoration: underline;">Impressum</h1>
+
+            <table style="margin-left: auto; margin-right: auto; color: black;">
+                    <tr>zukunft.farm eG - Die bäuerliche Innovationsgenossenschaft</tr>
+                    <tr>Löwelstraße 14</tr>
+                    <tr>1010 Wien</tr>
+                    <tr>kontakt@zukunft.farm</tr>
+                    <tr>Firmenbuchnummer: FN 556439 v</tr>
+            </table>
+        </div>
+
     </body>
    
 </html>
