--- a/www/src/app/item-table/item-table.component.scss
+++ b/www/src/app/item-table/item-table.component.scss
@@ -120,3 +120,14 @@ select {
   #link {
     color: gray;
   }
+
+
+  #impressum {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    background-color: grey;
+    width: 100%;
+    height: 200px;
+    text-align: center;
+    margin-left: -18px;
+    width: auto;
+  }
